Prevent long numbers from overflowing

--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,18 @@ body {
 
 .container {
     width: 350px;
-    height: 450px;
+    height: 480px;
 }
 
 .screen {
-    height: 75px;
+    height: 80px;
     color: white;
-    font-size: 42px;
+    font-size: 2.3rem;
     background-color: black;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    word-break: break-all;
 }
 
 .btn-container {
@@ -33,12 +34,12 @@ body {
 
 .btn-container button {
     width: 87.5px;
-    height: 75px;
-    font-size: 40px;
+    height: 80px;
     border: none;
+    font-size: 2.6rem;
 }
 
-.screen, button {
+.screen, .number {
     font-family: Arial, Helvetica, sans-serif;
 }
 
